examples/errors/part2_semantic1_binary_operator_valid.lya
dcl a int = 2; // Ok
dcl b int = 3; // Ok
dcl c int = a+3; // Ok
dcl d int = a+b; // Ok
dcl e bool = true; // Ok